:bug: fix slight shift from border

--- a/css/projects.css
+++ b/css/projects.css
@@ -115,21 +115,10 @@
   transform: translateY(-10px);
 }
 
-.project-list li.active {
-  background: rgba(41, 46, 66, 0.8);
-  color: #7aa2f7;
-}
-
 .explorer-title {
   color: #7aa2f7;
   margin-bottom: 0.5rem;
   font-size: 0.8rem;
-}
-
-.project-list li.active {
-  background: rgba(41, 46, 66, 0.8);
-  color: #7aa2f7; 
-  border-left: 0.2rem solid #7aa2f7; 
 }
 
 .project-list li {
@@ -139,7 +128,30 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  transition: background 0.3s ease, border-left 0.3s ease;
+  transition: background 0.3s ease;
+  position: relative;
+}
+
+.project-list li.active {
+  background: rgba(41, 46, 66, 0.8);
+  color: #7aa2f7;
+}
+
+/* left border */
+.project-list li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 0.2rem; 
+  height: 100%;
+  background-color: #7aa2f7;
+  transform-origin: left; 
+  transform: scaleX(0);  
+  transition: transform 0.3s ease; 
+}
+
+.project-list li.active::before {
+  transform: scaleX(1); 
 }
 
 .project-list li:hover {
